# CMake-Ep028

./: CMakeLists.txt  README.adoc  gui.cpp  main.cpp  use_fmt.cpp
calculator/: CMakeLists.txt
calculator/include/: calculator.hpp
calculator/src/: calculator.cpp  run_app.cpp
cmake/: AddCatch2.cmake
doc/: CMakeLists.txt  Doxyfile
test/: CMakeLists.txt
test/src/: test_calc.cpp  test_run_app.cpp
